<resources>
    <string name="app_name">Task Manager</string>
    <string name="novi_zadatak">Novi zadatak</string>
    <string name="statistika">Statistika</string>
    <string name="ime_zadatka">Ime zadatka</string>
    <string name="opis_zadatka">Opis zadatka</string>
    <string name="checkbox">Podseti me 15 minuta pre isteka</string>
    <string name="crveno_dugme">Jako važno</string>
    <string name="zuto_dugme">Važno</string>
    <string name="zeleno_dugme">Manje važno</string>
    <string name="dodaj_dugme">Dodaj</string>
    <string name="otkazi_dugme">Otkaži</string>
    <string name="sacuvaj_dugme">Sačuvaj</string>
    <string name="obrisi_dugme">Obriši</string>
    <string name="danas">Danas</string>
    <string name="sutra">Sutra</string>
    <string name="ponedeljak">Ponedeljak</string>
    <string name="utorak">Utorak</string>
    <string name="sreda">Sreda</string>
    <string name="cetvrtak">Četvrtak</string>
    <string name="petak">Petak</string>
    <string name="subota">Subota</string>
    <string name="nedelja">Nedelja</string>
    <string name="nazad">Nazad</string>
    <string name="visoki_prioritet">Zadaci visokog prioriteta</string>
    <string name="srednji_prioritet">Zadaci srednjeg prioriteta</string>
    <string name="niski_prioritet">Zadaci niskog prioriteta</string>
</resources>
