<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_novi_zadatak"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gravedigger.example.ra127_2014.com.taskmanager.NoviZadatak"
    android:background="@color/colorTirkiz">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:isScrollContainer="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ime"
                android:hint="@string/ime_zadatka"
                android:textCursorDrawable="@color/colorPrimary"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                android:padding="5dip"/>

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:timePickerMode="spinner">
            </TimePicker>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:datePickerMode="spinner"
                android:startYear="2017"
                android:endYear="2900"
                android:calendarViewShown="false">
            </DatePicker>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/opis"
                android:hint="@string/opis_zadatka"
                android:textCursorDrawable="@color/colorPrimary"
                android:textColor="@color/colorRed"
                android:gravity="start"
                android:lines="8"
                android:textColorHint="@color/colorPrimary"
                android:background="@drawable/rounded_edittext"
                android:padding="5dip"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/checkbox"
                android:buttonTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:id="@+id/box"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorRed"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/crveno_dugme"
                    android:id="@+id/b1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zuto_dugme"
                    android:backgroundTint="@color/colorYellow"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/b2"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zeleno_dugme"
                    android:backgroundTint="@color/colorGreen"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/b3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dodaj_dugme"
                    android:textAllCaps="false"
                    android:id="@+id/b4"
                    android:textColor="@color/colorPrimary"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/otkazi_dugme"
                    android:textAllCaps="false"
                    android:id="@+id/b5"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
